--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,17 +5,24 @@ x-restart-policy: &restart_policy
 
 
 services:
+  load_balancer:
+    image: localhost/nginx
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
+    ports:
+      - 80:80
+    depends_on:
+      - web
+      - ipc_server
+
   ipc_server:
     <<: *restart_policy
     image: localhost/ipc_server
     build:
       context: ./ipc_server
       dockerfile: Dockerfile
-    container_name: ipc_server
     tty: true
-    networks:
-      eternal:
-        ipv4_address: 172.20.0.2
     volumes:
       - .:/db
 
@@ -25,11 +32,7 @@ services:
     build:
       context: ./bot
       dockerfile: Dockerfile
-    container_name: bot
     tty: true
-    networks:
-      eternal:
-        ipv4_address: 172.20.0.3
     environment:
       - TOKEN=TOKEN_HERE
     depends_on:
@@ -41,27 +44,15 @@ services:
     build:
       context: ./web
       dockerfile: Dockerfile
-    container_name: web
     tty: true
     environment:
-      - IPC_DOMAIN=172.20.0.2
-      - CLIENT_ID=CLIENT_ID_HERE
-      - CLIENT_SECRET=CLIENT_SECRET_HERE
+      - IPC_DOMAIN=ipc_server
+      - CLIENT_ID=YOUR_CLIENT_ID
+      - CLIENT_SECRET=YOUR_CLIENT_SECRET_HERE
       - REDIRECT_URI=http://localhost/callback
       - SIGN_PASS=JWT_SIGN_PASSPHRASE
-    networks:
-      eternal:
-        ipv4_address: 172.20.0.4
     depends_on:
       - ipc_server
-    ports:
-      - 80:3000
-
-networks:
-  eternal:
-    ipam:
-      config:
-        - subnet: 172.20.0.0/24
 
 volumes:
   media_db:
