--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,6 +11,8 @@ http {
        
   server {
    listen 80;
+   listen [::]:80;
+   server_tokens off;
    location / {
     proxy_pass http://all/;
     }
